# TheRayTracerChallengeCUDA

./: .gitignore  CMakeLists.txt  README.md
Project/: TheRayTracerChallengeCUDA.vcxproj
Src/: OpenGL.cpp  OpenGL.h  intersection.cpp  main.cpp  maths.h  matrix.h  pattern.h  render.cu  render.cuh  tuple.h
